--- a/public/lichniy-kabinet.html
+++ b/public/lichniy-kabinet.html
@@ -267,12 +267,12 @@
                   </p>
                 </div>
                 <!-- Carts -->
-                <div class="card-scroll h-40 overflow-y-auto pr-5 mt-3.5 space-y-4">
+                <div class="card-scroll h-40 overflow-y-auto pr-1 md:pr-5 mt-3.5 space-y-4">
                   <!-- Cart 1 -->
                   <div class="min-w-52 flex gap-2">
                     <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                     <div class="flex-1">
-                      <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                      <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                       <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span
                           class="text-brand-black-500">50
                           г</span></p>
@@ -286,7 +286,7 @@
                   <div class="min-w-52 flex gap-2">
                     <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                     <div class="flex-1">
-                      <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                      <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                       <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span
                           class="text-brand-black-500">50
                           г</span></p>
@@ -300,7 +300,7 @@
                   <div class="min-w-52 flex gap-2">
                     <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                     <div class="flex-1">
-                      <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                      <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                       <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span
                           class="text-brand-black-500">50
                           г</span></p>
@@ -314,7 +314,7 @@
                   <div class="min-w-52 flex gap-2">
                     <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                     <div class="flex-1">
-                      <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                      <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                       <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span
                           class="text-brand-black-500">50
                           г</span></p>
@@ -328,7 +328,7 @@
                   <div class="min-w-52 flex gap-2">
                     <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                     <div class="flex-1">
-                      <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                      <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                       <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span
                           class="text-brand-black-500">50
                           г</span></p>
@@ -342,7 +342,7 @@
                   <div class="min-w-52 flex gap-2">
                     <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                     <div class="flex-1">
-                      <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                      <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                       <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span
                           class="text-brand-black-500">50
                           г</span></p>
