--- a/public/placing-order.html
+++ b/public/placing-order.html
@@ -248,12 +248,12 @@
               <h5 class="font-medium text-xl lg:text-2xl">Товаров в заказе: <span class="text-brand-gray-900">12</span>
               </h5>
               <!-- Carts -->
-              <div class="card-scroll h-[19.75rem] overflow-y-auto pr-5 lg:pr-10 mt-4 space-y-4">
+              <div class="card-scroll h-[19.75rem] overflow-y-auto pr-1 md:pr-5 lg:pr-10 mt-4 space-y-4">
                 <!-- Cart 1 -->
                 <div class="min-w-52 flex gap-2">
                   <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                   <div class="flex-1">
-                    <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                    <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                     <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span class="text-brand-black-500">50
                         г</span></p>
                     <div class="flex items-center justify-between gap-3 mt-2">
@@ -266,7 +266,7 @@
                 <div class="min-w-52 flex gap-2">
                   <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                   <div class="flex-1">
-                    <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                    <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                     <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span class="text-brand-black-500">50
                         г</span></p>
                     <div class="flex items-center justify-between gap-3 mt-2">
@@ -279,7 +279,7 @@
                 <div class="min-w-52 flex gap-2">
                   <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                   <div class="flex-1">
-                    <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                    <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                     <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span class="text-brand-black-500">50
                         г</span></p>
                     <div class="flex items-center justify-between gap-3 mt-2">
@@ -292,7 +292,7 @@
                 <div class="min-w-52 flex gap-2">
                   <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                   <div class="flex-1">
-                    <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                    <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                     <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span class="text-brand-black-500">50
                         г</span></p>
                     <div class="flex items-center justify-between gap-3 mt-2">
@@ -305,7 +305,7 @@
                 <div class="min-w-52 flex gap-2">
                   <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                   <div class="flex-1">
-                    <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                    <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                     <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span class="text-brand-black-500">50
                         г</span></p>
                     <div class="flex items-center justify-between gap-3 mt-2">
@@ -318,7 +318,7 @@
                 <div class="min-w-52 flex gap-2">
                   <img class="shrink-0 size-10" src="./img/image-product__1.png" alt="image">
                   <div class="flex-1">
-                    <p class="font-semibold text-sm lg:text-base/5">Navy Blue Габа Улун</p>
+                    <p class="font-semibold text-base/5">Navy Blue Габа Улун</p>
                     <p class="text-brand-gray-400 text-sm/4 mt-1">Размер упаковки: <span class="text-brand-black-500">50
                         г</span></p>
                     <div class="flex items-center justify-between gap-3 mt-2">
