--- a/public/catalog-factory.html
+++ b/public/catalog-factory.html
@@ -268,7 +268,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -310,7 +310,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -352,7 +352,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -394,7 +394,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -436,7 +436,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -478,7 +478,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -520,7 +520,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -562,7 +562,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -604,7 +604,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -646,7 +646,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -688,7 +688,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
@@ -730,7 +730,7 @@
               <div class="bg-white rounded-md px-2 md:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
                   <button
-                    class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
+                    class="text-xl lg:text-2xl md:text-xs/3 px-2 py-1.5">
                     Популярный
                   </button>
                   <!-- Like -->
