--- a/public/basket.html
+++ b/public/basket.html
@@ -253,7 +253,7 @@
                   <div class="whitespace-nowrap flex flex-col items-end justify-between gap-5 ml-auto">
                     <div class="text-right">
                       <span class="text-sm/4 line-through text-brand-black-300">10 500 ₽</span>
-                      <p class="font-semibold text-xl lg:text-2xl text-brand-black-400">8 999 ₽</p>
+                      <p class="font-semibold lg:text-2xl text-brand-black-400">8 999 ₽</p>
                     </div>
                     <button class="transition duration-200 hover:text-brand-green-400">
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -313,7 +313,7 @@
                   <div class="whitespace-nowrap flex flex-col items-end justify-between gap-5 ml-auto">
                     <div class="text-right">
                       <span class="text-sm/4 line-through text-brand-black-300">10 500 ₽</span>
-                      <p class="font-semibold text-xl lg:text-2xl text-brand-black-400">8 999 ₽</p>
+                      <p class="font-semibold lg:text-2xl text-brand-black-400">8 999 ₽</p>
                     </div>
                     <button class="transition duration-200 hover:text-brand-green-400">
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -373,7 +373,7 @@
                   <div class="whitespace-nowrap flex flex-col items-end justify-between gap-5 ml-auto">
                     <div class="text-right">
                       <span class="text-sm/4 line-through text-brand-black-300">10 500 ₽</span>
-                      <p class="font-semibold text-xl lg:text-2xl text-brand-black-400">8 999 ₽</p>
+                      <p class="font-semibold lg:text-2xl text-brand-black-400">8 999 ₽</p>
                     </div>
                     <button class="transition duration-200 hover:text-brand-green-400">
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
