--- a/public/lichniy-kabinet.html
+++ b/public/lichniy-kabinet.html
@@ -193,26 +193,28 @@
       <section class="max-w-base mx-auto mt-6 px-4 md:px-7">
         <h2>Личный кабинет</h2>
         <!-- Orders -->
-        <div class="md:flex gap-30 mt-6">
+        <div class="flex flex-col lg:flex-row gap-5 lg:gap-30 mt-6">
           <!-- Left -->
-          <div
-            class="hidden lg:block w-full max-w-64 h-max bg-white rounded-md text-sm lg:text-base text-brand-gray-900 py-3">
-            <a class="block bg-brand-green-100 py-2 px-4" href="#">
-              Мои заказы
-            </a>
-            <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
-              Личные данные
-            </a>
-            <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
-              Бонусные баллы
-            </a>
-            <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
-              Избранное
-            </a>
-            <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
-              Выйти
-            </a>
-          </div>
+           <div class="w-full lg:max-w-64 bg-white whitespace-nowrap overflow-x-auto no-scroll px-4 lg:px-0">
+             <div
+               class="flex lg:block w-full h-max rounded-md text-sm lg:text-base text-brand-gray-900 py-3">
+               <a class="block bg-brand-green-100 py-2 px-4" href="#">
+                 Мои заказы
+               </a>
+               <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
+                 Личные данные
+               </a>
+               <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
+                 Бонусные баллы
+               </a>
+               <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
+                 Избранное
+               </a>
+               <a class="block transition duration-200 hover:bg-brand-green-100 py-2 px-4" href="#">
+                 Выйти
+               </a>
+             </div>
+           </div>
           <!-- Right -->
           <div class="flex-1 bg-white rounded-md px-4 md:px-6 py-4">
             <h3 class="text-[#1B1B1F] mb-0.5">История заказов</h3>
@@ -390,7 +392,8 @@
                       <span class="font-normal text-brand-gray-400 text-sm lg:text-base">12 Товаров на сумму:</span>
                       23 000 ₽
                     </p>
-                    <a class="text-brand-gray-400 text-sm underline transition duration-200 hover:text-brand-green-400" href="#">
+                    <a class="text-brand-gray-400 text-sm underline transition duration-200 hover:text-brand-green-400"
+                      href="#">
                       Подробнее
                     </a>
                   </div>
@@ -433,7 +436,8 @@
                       <span class="font-normal text-brand-gray-400 text-sm lg:text-base">12 Товаров на сумму:</span>
                       23 000 ₽
                     </p>
-                    <a class="text-brand-gray-400 text-sm underline transition duration-200 hover:text-brand-green-400" href="#">
+                    <a class="text-brand-gray-400 text-sm underline transition duration-200 hover:text-brand-green-400"
+                      href="#">
                       Подробнее
                     </a>
                   </div>
@@ -509,7 +513,8 @@
             </div>
           </div>
           <!-- Main Wrapper -->
-          <div class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
+          <div
+            class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
             <!-- 1 -->
             <div class="w-1/2 sm:w-auto">
               <h5 class="font-semibold">Покупателям</h5>
