--- a/public/reviews.html
+++ b/public/reviews.html
@@ -206,8 +206,7 @@
           <!-- Cart 1 -->
           <div class="flex flex-col sm:flex-row gap-4 lg:gap-6 bg-white rounded-md overflow-hidden p-4 sm:p-0">
             <!-- Left -->
-            <div
-              class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -326,8 +325,7 @@
           <!-- Cart 2 -->
           <div class="flex flex-col sm:flex-row gap-4 lg:gap-6 bg-white rounded-md overflow-hidden p-4 sm:p-0">
             <!-- Left -->
-            <div
-              class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -442,8 +440,7 @@
           <!-- Cart 3 -->
           <div class="flex flex-col sm:flex-row gap-4 lg:gap-6 bg-white rounded-md overflow-hidden p-4 sm:p-0">
             <!-- Left -->
-            <div
-              class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -562,8 +559,7 @@
           <!-- Cart 4 -->
           <div class="flex flex-col sm:flex-row gap-4 lg:gap-6 bg-white rounded-md overflow-hidden p-4 sm:p-0">
             <!-- Left -->
-            <div
-              class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
+            <div class="w-full sm:min-w-56 max-w-80 lg:max-w-64 bg-white rounded-md sm:px-4 py-3 lg:py-4 lg:pb-5">
               <div class="flex justify-between gap-5">
                 <button
                   class="bg-brand-green-400 text-white rounded h-max font-medium text-10 md:text-xs/3 px-2 py-1.5">
@@ -682,17 +678,9 @@
           <!-- Previous -->
           <button
             class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
-
           <button class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</button>
-
           <button class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</button>
-
-<<<<<<< HEAD
           <button class="w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
-=======
-          <button
-            class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
->>>>>>> 57861ac2017999901ac0abc98faf458b2df8b5f2
           <!-- Next btn -->
           <button class="w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
         </div>
@@ -747,7 +735,8 @@
             </div>
           </div>
           <!-- Main Wrapper -->
-          <div class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
+          <div
+            class="w-full max-w-[40.1875rem] flex flex-col sm:flex-row sm:justify-between gap-5 text-brand-custom-gray">
             <!-- 1 -->
             <div class="w-1/2 sm:w-auto">
               <h5 class="font-semibold">Покупателям</h5>
